# switch-sim

./: README.md
cfg/: reference.yaml
doc/: cmd.typ
simulator/: CMakeLists.txt  Config.hpp  simulator.cpp  utils.hpp
simulator/basic/: BasicAnalyzer.hpp  BasicGenerator.hpp  BasicSystem.hpp
simulator/case/basic/: BasicAnalyzer.hpp  BasicGenerator.hpp  BasicSystem.hpp
simulator/cases/basic/: BasicAnalyzer.hpp  BasicGenerator.hpp  BasicSystem.hpp
simulator/p4/: FieldBundleProfileOf.hpp  MatInput.hpp  MatOutput.hpp  MatPacket.hpp  MatSystem.hpp  Mau.hpp  Phv.hpp  Pipe.hpp  Pipeline.hpp
simulator/p4/mat/: Match.hpp
simulator/p4/mat/compare/: Compare.hpp  CompareConfig.hpp
simulator/p4/mat/gateway/: Gateway.hpp  GatewayCompare.hpp  GatewayCompareConfig.hpp  GatewaySubmodule.hpp  GatewayTranslate.hpp  GatewayTranslateConfig.hpp
simulator/p4/mat/getaddress/: GetAddress.hpp  GetAddressBitPool.hpp  GetAddressChipSelect.hpp
simulator/p4/mat/getkey/: GetKey.hpp  GetKeyConfig.hpp
simulator/p4/mat/hash/: Hash.hpp  HashUnit.hpp  HashUnitConfig.hpp  HashValue.hpp
simulator/p4/mat/memread/: MemRead.hpp  MemReadConfig.hpp
simulator/p4/mat/transform/: Transform.hpp  TransformConfig.hpp
simulator/p4/mem/: FlippedSramClusterReadWrite.hpp  MatchSramClusterReadWrite.hpp  SramCluster.hpp  SramClusterReadWrite.hpp
simulator/program/: Program.hpp
simulator/test/: Console.hpp  TestApplication.hpp  TestInstance.hpp
simulator/utils/: Delay.hpp  FieldBundle.hpp  FieldBundleProfile.hpp  Hex.hpp  Input.hpp  InputAnalyzer.hpp  Log2Ceil.hpp  Module.hpp  Output.hpp  Packet.hpp  PacketGenerator.hpp  Piped.hpp  Random.hpp  Sram.hpp  UInt.hpp  Wire.hpp
